--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ env:
 
   matrix:
   - LINT_CHECK="1"
-  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="mrp_barcode" MAKEPOT="1"
-  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="mrp_barcode"
+  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="mrp_barcode,stock_picking_no_over_scan"
+  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="mrp_barcode,stock_picking_no_over_scan"
 
 install:
   - git clone https://github.com/OCA/maintainer-quality-tools.git $HOME/maintainer-quality-tools
