--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,18 @@ python:
   - "3.5"
 
 addons:
+  postgresql: "9.6"
   apt:
     packages:
       - expect-dev  # provides unbuffer utility
       - python-lxml # because pip installation is slow
+      - postgresql-9.6-postgis-2.3
+      - postgis
+
+before_script:
+  - createdb openerp_test
+  - psql -U postgres -d openerp_test -c "create extension postgis"
+  - psql -U postgres -d openerp_test -c "create extension postgis_topology"
 
 env:
   global:
