--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ env:
 
   matrix:
   - LINT_CHECK="1"
-  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fsm,agreement_helpdesk,helpdesk_stock"
-  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fsm,agreement_helpdesk,helpdesk_stock"
+  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fsm,agreement_helpdesk,helpdesk_stock,helpdesk_scope"
+  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fsm,agreement_helpdesk,helpdesk_stock,helpdesk_scope"
 
 install:
   - git clone https://github.com/ursais/maintainer-quality-tools.git $HOME/maintainer-quality-tools
