--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ env:
 
   matrix:
   - LINT_CHECK="1"
-  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fieldservice,agreement_helpdesk,helpdesk_stock,helpdesk_scope,helpdesk_ticket_type_default_priority,helpdesk_phone,fieldservice_helpdesk_stock,agreement_sale_subscription,helpdesk_ticket_parent,helpdesk_fieldservice_agreement"
-  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fieldservice,agreement_helpdesk,helpdesk_stock,helpdesk_scope,helpdesk_ticket_type_default_priority,helpdesk_phone,fieldservice_helpdesk_stock,agreement_sale_subscription,helpdesk_ticket_parent,helpdesk_fieldservice_agreement"
+  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fieldservice,agreement_helpdesk,helpdesk_stock,helpdesk_scope,helpdesk_ticket_type_default_priority,helpdesk_phone,fieldservice_helpdesk_stock,agreement_sale_subscription,helpdesk_ticket_parent,helpdesk_fieldservice_agreement,helpdesk_resolution"
+  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fieldservice,agreement_helpdesk,helpdesk_stock,helpdesk_scope,helpdesk_ticket_type_default_priority,helpdesk_phone,fieldservice_helpdesk_stock,agreement_sale_subscription,helpdesk_ticket_parent,helpdesk_fieldservice_agreement,helpdesk_resolution"
 
 install:
   - git clone https://github.com/ursais/maintainer-quality-tools.git $HOME/maintainer-quality-tools
