--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,29 @@
 language: python
 sudo: false
-cache:
-  apt: true
-  directories:
-    - $HOME/.cache/pip
+cache: pip
 
 python:
   - "3.5"
 
 addons:
   postgresql: "9.6"
-  postgresql: "9.5"
   apt:
     packages:
       - expect-dev  # provides unbuffer utility
+      - python-lxml  # because pip installation is slow
+      - python-simplejson
+      - python-serial
+      - python-yaml
 
 env:
   global:
-  - VERSION="12.0" TESTS="0" LINT_CHECK="0"
-  - PHANTOMJS_VERSION="latest"
+  - VERSION="12.0" TESTS="0" LINT_CHECK="0" MAKEPOT="0"
 
   matrix:
   - LINT_CHECK="1"
-  - TESTS="1" ODOO_REPO="OCA/OCB"
-  - TESTS="1" ODOO_REPO="odoo/odoo"
+  - TRANSIFEX="1"
+  - TESTS="1" ODOO_REPO="OCA/OCB" LINT_CHECK="0"
+  - TESTS="1" ODOO_REPO="odoo/odoo" LINT_CHECK="0"
 
 install:
   - git clone --depth=1 https://github.com/ursais/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
@@ -35,3 +35,4 @@ script:
 
 after_success:
   - travis_after_tests_success
+
