--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ env:
 
   matrix:
   - LINT_CHECK="1"
-  - TESTS="1" ODOO_REPO="OCA/OCB" LINT_CHECK="0" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fieldservice,agreement_helpdesk,helpdesk_stock,helpdesk_scope,helpdesk_ticket_type_default_priority,helpdesk_phone,fieldservice_helpdesk_stock,agreement_sale_subscription,helpdesk_ticket_parent,helpdesk_fieldservice_agreement,helpdesk_resolution"
-  - TESTS="1" ODOO_REPO="odoo/odoo" LINT_CHECK="0" EXCLUDE="mrp_barcode,stock_picking_no_over_scan,helpdesk_ticket_to_task,helpdesk_fieldservice,agreement_helpdesk,helpdesk_stock,helpdesk_scope,helpdesk_ticket_type_default_priority,helpdesk_phone,fieldservice_helpdesk_stock,agreement_sale_subscription,helpdesk_ticket_parent,helpdesk_fieldservice_agreement,helpdesk_resolution"
+  - TESTS="1" ODOO_REPO="OCA/OCB" LINT_CHECK="0" EXCLUDE="helpdesk_ticket_type_default_priority"
+  - TESTS="1" ODOO_REPO="odoo/odoo" LINT_CHECK="0" EXCLUDE="helpdesk_ticket_type_default_priority"
 
 install:
   - git clone --depth=1 https://github.com/ursais/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
