--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ jobs:
       before_install:
     - stage: test
       env:
-        - TESTS="1" ODOO_REPO="odoo/odoo" MAKEPOT="1"
+        - TESTS="1" ODOO_REPO="odoo/odoo" MAKEPOT="1" EXCLUDE="sale_subscription_openshift"
     - stage: test
       env:
-        - TESTS="1" ODOO_REPO="OCA/OCB"
+        - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="sale_subscription_openshift"
 
 env:
   global:
