--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
           # update the NOT INSTALLABLE ADDONS section above
           - id: oca-update-pre-commit-excluded-addons
           - id: oca-fix-manifest-website
-            args: ["https://github.com/OCA/web"]
+            args: ["https://github.com/ursais/osi-addons"]
     - repo: https://github.com/myint/autoflake
       rev: v1.4
       hooks:
