--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,24 @@ addons:
             - expect-dev # provides unbuffer utility
 
 stages:
+    - linting
     - test
 
 jobs:
     include:
+        - stage: linting
+          name: "pre-commit"
+          python: "3.6" # Black requires python >= 3.6
+          install: pip install pre-commit
+          script: pre-commit run --all --show-diff-on-failure --verbose --color always
+          after_success:
+          before_install:
         - stage: test
           env:
-              - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1"
+              - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1" EXCLUDE="documents_helpdesk"
         - stage: test
           env:
-              - TESTS=1 ODOO_REPO="OCA/OCB"
+              - TESTS=1 ODOO_REPO="OCA/OCB" EXCLUDE="documents_helpdesk"
 env:
     global:
         - VERSION="14.0" TESTS="0" LINT_CHECK="0" MAKEPOT="0"
