--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,15 @@ jobs:
           before_install:
         - stage: test
           env:
-              - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1" EXCLUDE="documents_helpdesk"
+              - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1"
         - stage: test
           env:
-              - TESTS=1 ODOO_REPO="OCA/OCB" EXCLUDE="documents_helpdesk"
+              - TESTS=1 ODOO_REPO="OCA/OCB"
 env:
     global:
         - VERSION="14.0" TESTS="0" LINT_CHECK="0" MAKEPOT="0"
         - MQT_DEP=PIP
+        - EXCLUDE="documents_helpdesk"
 
 install:
     - git clone --depth=1 https://github.com/ursais/maintainer-quality-tools.git
