--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
     - $HOME/.cache/pre-commit
 
 python:
-  - "3.6"
+  - "3.8"
 
 addons:
   postgresql: "9.6"
@@ -14,18 +14,10 @@ addons:
       - expect-dev # provides unbuffer utility
 
 stages:
-  - linting
   - test
 
 jobs:
   include:
-    - stage: linting
-      name: "pre-commit"
-      python: "3.6" # Black requires python >= 3.6
-      install: pip install pre-commit
-      script: pre-commit run --all --show-diff-on-failure --verbose --color always
-      after_success:
-      before_install:
     - stage: test
       env:
         - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1"
@@ -34,9 +26,9 @@ jobs:
         - TESTS=1 ODOO_REPO="OCA/OCB"
 env:
   global:
-    - VERSION="14.0" TESTS="0" LINT_CHECK="0" MAKEPOT="0"
+    - VERSION="15.0" TESTS="0" LINT_CHECK="0" MAKEPOT="0"
     - MQT_DEP=PIP
-    - EXCLUDE="documents_helpdesk"
+    - EXCLUDE=""
 
 install:
   - git clone --depth=1 https://github.com/ursais/maintainer-quality-tools.git
