--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-# Project specific
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+/.venv
+/.pytest_cache
 
 # C extensions
 *.so
