--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,10 @@
-[submodule "odoo"]
-	path = odoo/odoo
-	url = https://github.com/ursais/odoo.git
-	branch = 15.0
 [submodule "osi-addons"]
 	path = odoo/src/osi-addons
 	url = https://github.com/ursais/osi-addons.git
 	branch = 15.0
+[submodule "odoo/src/enterprise"]
+	path = odoo/src/enterprise
+	url = https://github.com/ursais/enterprise.git
+[submodule "odoo/odoo-base"]
+	path = odoo/odoo-base
+	url = https://github.com/ursais/odoo.git
