--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,22 +1,24 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.11.0
+_commit: v1.14.0
 _src_path: gh:oca/oca-addons-repo-template
 ci: GitHub
 dependency_installation_mode: PIP
 generate_requirements_txt: true
 github_check_license: true
+github_ci_extra_env: {}
 github_enable_codecov: true
 github_enable_makepot: true
 github_enable_stale_action: true
-github_enforce_dev_status_compatibility: true
+github_enforce_dev_status_compatibility: false
 include_wkhtmltopdf: false
 odoo_version: 16.0
-org_name: Odoo Community Association (OCA)
-org_slug: OCA
+org_name: Open Source Integrators
+org_slug: ursais
 rebel_module_groups: []
-repo_description: 'TODO: add repo description.'
-repo_name: field-service
-repo_slug: field-service
-repo_website: https://github.com/OCA/field-service
+repo_description: OSI Addons
+repo_name: OSI Addons
+repo_slug: osi-addons
+repo_website: https://github.com/ursais/osi-addons
 travis_apt_packages: []
 travis_apt_sources: []
+
