--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,17 +1,24 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.5.2
+_commit: v1.14.0
 _src_path: https://github.com/OCA/oca-addons-repo-template.git
 ci: GitHub
 dependency_installation_mode: OCA
 generate_requirements_txt: true
+github_check_license: true
+github_ci_extra_env: {}
+github_enable_codecov: true
+github_enable_makepot: true
+github_enable_stale_action: true
+github_enforce_dev_status_compatibility: true
 include_wkhtmltopdf: true
 odoo_version: 14.0
 org_name: Open Source Integrators
 org_slug: ursais
 rebel_module_groups: []
-repo_description: null
+repo_description: OSI Addons
 repo_name: OSI Addons
 repo_slug: osi-addons
 repo_website: https://github.com/ursais/osi-addons
 travis_apt_packages: []
 travis_apt_sources: []
+
