--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.14.0
+_commit: v1.14.2
 _src_path: gh:oca/oca-addons-repo-template
 ci: GitHub
 dependency_installation_mode: PIP
@@ -7,14 +7,15 @@ generate_requirements_txt: true
 github_check_license: true
 github_ci_extra_env: {}
 github_enable_codecov: true
-github_enable_makepot: true
+github_enable_makepot: false
 github_enable_stale_action: true
 github_enforce_dev_status_compatibility: true
 include_wkhtmltopdf: false
 odoo_version: 15.0
 org_name: Open Source Integrators
 org_slug: ursais
-rebel_module_groups: []
+rebel_module_groups:
+- osi_helpdesk_sale,fleet_helpdesk
 repo_description: OSI Addons
 repo_name: OSI Addons
 repo_slug: osi-addons
