--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,10 +36,8 @@ jobs:
       matrix:
         include:
           - container: ghcr.io/oca/oca-ci/py3.6-odoo14.0:latest
-            makepot: "true"
+            makepot: "false"
             name: test with Odoo
-          - container: ghcr.io/oca/oca-ci/py3.6-ocb14.0:latest
-            name: test with OCB
     services:
       postgres:
         image: postgres:9.6
