--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
           - container: ghcr.io/oca/oca-ci/py3.10-odoo16.0:latest
             makepot: "false"
             name: test with Odoo
+            EXCLUDE: l10n_mx_res_partner_csf_regime
     services:
       postgres:
         image: postgres:9.6
