--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,13 @@ jobs:
   test:
     runs-on: ubuntu-22.04
     container: ${{ matrix.container }}
+    env:
+      EXCLUDE: l10n_mx_res_partner_csf_regime
     strategy:
       fail-fast: false
       matrix:
         include:
           - container: ghcr.io/oca/oca-ci/py3.10-odoo16.0:latest
-            exclude: l10n_mx_res_partner_csf_regime
             makepot: "false"
             name: test with Odoo
     services:
