--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,6 @@ jobs:
   test:
     runs-on: ubuntu-22.04
     container: ${{ matrix.container }}
-    env:
-      EXCLUDE: l10n_mx_res_partner_csf_regime,l10n_mx_edi_40
     strategy:
       fail-fast: false
       matrix:
@@ -21,6 +19,7 @@ jobs:
           - container: ghcr.io/oca/oca-ci/py3.10-odoo16.0:latest
             makepot: "false"
             name: test with Odoo
+            exclude: "l10n_mx_res_partner_csf_regime"
     services:
       postgres:
         image: postgres:9.6
